k8sTest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sp-micro-service-argo-demo
  name: sp-micro-service-argo-demo
  namespace: playground
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sp-micro-service-argo-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sp-micro-service-argo-demo
    spec:
      containers:
      - image: sinhasonalkumar/sp-micro-service-argo-demo:1.0.0
        imagePullPolicy: Always
        name: sp-micro-service-argo-demo
        resources:
          requests:
            memory: 130Mi
          limits:
            memory: 520Mi
        volumeMounts:
        - name: workdir
          mountPath: "/app-configs"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: workdir
        emptyDir: {}
