k8sTest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sp-micro-service-argo-demo
  name: sp-micro-service-argo-demo
  namespace: dev
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sp-micro-service-argo-demo
  sessionAffinity: None
  type: ClusterIP
