k8sTest/gatewayResource.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: sp-micro-service-argo-demo-ig
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller (k get svc istio-ingressgateway -n istio-system --show-labels | grep -i "istio=")
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
